package mei.designpattern.creational.adaptor.carcontroller;

public class PoliceLight {
    public void alarmLamp() {
        System.out.println("twinkle");
    }
}
