package mei.designpattern.creational.adaptor.carcontroller;

public class PoliceSound {
    public void alarmSound() {
        System.out.println("biubiubiu");
    }
}
